fix: specify word-wrap to prevent external styles from interfering  (#32)
* set word-wrap on button

* 0.3.0-rc.3

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -22,6 +22,7 @@
   font-family: $font-family-sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  word-wrap: normal;
 
   @media (min-width: $bp-small) {
     left: auto;
